# 2012-4-16

- Fixed 'ghost' messages
- Converted BMI to standalone applet
- Converted blood pressure to standalone applet (still needs to account for diastolic)
- Add "slid out" view for applets. In the future the patient picker will work the same way

# 2012-4-13

- Add ability to reorder installed applets
- Fix bugs with data display
- Update simulated applets

# 2012-4-13

- Added new applets provided by Dave
- Added allergies to synthetic data
- Medication refill now shows refill date
- Set grid vertical padding to allow showing 2 full rows of applets
- Set appropriate applets for each user
- Added wahoo applet
- Added nikeplus applet
- Added withings applet
- Added fitbit applet
- Added wakemate applet
- Fixed chronic conditions misspelling
- Added functional status applet
- Added popHealth applet
- Added lyme disease applet
- Added ms applet
- Added chronic fatigue applet
- Added applet management mechanism

# 2012-4-12

- updated patient data files
- finish showing all data on the summary view after the summary view refactor

The following changes lay the foundation for the tools menu but customizations to applet visibility and sort order are available only at compile time.

- list of applets is now stored per-patient
- different patients can show different applets
- applets can be ordered per patient

# 2012-4-11

- Setup api to pass in tap events to applet tiles
- Moved vital views to be an applet
- Moved medications to be an applet
- Added mockup of TBI tracker tile
- TBI Tracker tap pushes full screen view onto the stack
- Fixed enterprise profile issue
- Applets are now loaded dynamically from a plist file
- Applet API automatically sets patient and user info dictionary for user defined values
- Added immunizations applet
- Added vitals applet
- Added medications applet
- Added recent encounters applet

# 2012-4-10

- Started implementation of applet loading

# 2012-4-09

- Change red color in the app