@@ -1,3 +1,9 @@
+# 2012-4-18
+
+- Fixed normal ranges on blood pressure applet
+- Added diastolic values to BP popover table
+- Normal range is now checked for systolic values
+
 # 2012-4-16
 
 - Fixed 'ghost' messages
